<resources>
    <string name="app_name">Dotify</string>
    <string name="this_is_the_album_cover">This is the album cover</string>
    <string name="run_away">Run away</string>
    <string name="mino">Mino</string>
    <string name="play_format">%d plays</string>
    <string name="mini_player_format">%s - %s</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>

    <string name="about_creator_wensi_xu">Creator: Wensi Xu</string>
    <string name="about_version_number">Version: %s</string>
    <string name="about_university_of_washington">Education: University of Washington</string>
    <string name="about_major">Major: Informatics</string>
    <string name="stat_song_played">%s has been played %s times</string>
    <string name="setting">Setting</string>
    <string name="stat_total_played_sofar">%d songs have been played so far</string>
    <string name="profile_first_name">First Name: %s</string>
    <string name="profile_last_name">Last Name: %s</string>
    <string name="profile_has_nose">Has Nose: %s</string>
    <string name="profile_platform">Platform: %s</string>
    <string name="song_notifications">Song Notifications</string>
    <string name="song_channel_name">New Songs</string>
    <string name="song_channel_description">Notifys when there is a new song</string>

</resources>