<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment"
    android:padding="@dimen/containerPadding"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/btnStatistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_notifications"
        android:textSize="@dimen/smallFont"
        app:switchPadding="@dimen/switchNotificationPadding"
        />

</LinearLayout>