<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment"
    android:padding="@dimen/containerPadding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_creator_wensi_xu"
        android:textSize="@dimen/mediumFont"
        android:paddingTop="@dimen/aboutFragmentPadding"/>

    <TextView
        android:id="@+id/versionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mediumFont"
        android:paddingTop="@dimen/aboutFragmentPadding"/>
    <TextView
        android:id="@+id/university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_university_of_washington"
        android:textSize="@dimen/mediumFont"
        android:paddingTop="@dimen/aboutFragmentPadding"/>

    <TextView
        android:id="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_major"
        android:textSize="@dimen/mediumFont"
        android:paddingTop="@dimen/aboutFragmentPadding"/>

</LinearLayout>