<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/containerPadding"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/this_is_the_album_cover"
            android:scaleType="fitStart"
            android:src="@drawable/album_cover"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/soundTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/run_away"
            android:textColor="@color/black"
            android:textSize="@dimen/largeFont"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumCover" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/mino"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumFont"
            app:layout_constraintBottom_toTopOf="@id/numPlayed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundTitle" />

        <TextView
            android:id="@+id/numPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumFont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numPlayed">

            <ImageButton
                android:id="@+id/previousIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_baseline_skip_previous_24" />

            <ImageButton
                android:id="@+id/playIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_play_button"
                app:layout_constraintTop_toBottomOf="@+id/numPlayed" />

            <ImageButton
                android:id="@+id/nextIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_baseline_skip_next_24" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>